251113 - GPS를 고려한 변수 및 메서드 추가